Added Edit Profile and Avatar route
